Squashing Mobile Bugs

--- a/src/components/work/DetailView.css
+++ b/src/components/work/DetailView.css
@@ -163,6 +163,7 @@ detail-view{
   }
 
   .header-container {
+    
     flex-direction: column;
     align-items: center;
     text-align: flex-start;
@@ -178,9 +179,11 @@ detail-view{
   .detail-title {
     padding-left: 0;
     font-size: 1.5em;
+    align-self: flex-start;
   }
 
 .detail-date {
+  align-self: flex-start;
   padding-left: 0;
   padding-top: 0.6em;
   margin: 0;
